--- a/Dude-Money/Modules/AddBill/Views/AddBillViewController.xib
+++ b/Dude-Money/Modules/AddBill/Views/AddBillViewController.xib
@@ -30,7 +30,7 @@
                     <state key="normal" title="Button"/>
                     <buttonConfiguration key="configuration" style="plain" image="xmark.circle" catalog="system"/>
                     <connections>
-                        <action selector="closeButtonTapped:" destination="-1" eventType="touchUpInside" id="ALL-gK-z2Y"/>
+                        <action selector="closeButtonTapped" destination="-1" eventType="touchUpInside" id="tek-lq-Qqd"/>
                     </connections>
                 </button>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="nLT-1P-OhX">
@@ -109,7 +109,7 @@
                     <state key="normal" title="Button"/>
                     <buttonConfiguration key="configuration" style="tinted" title="Ekle"/>
                     <connections>
-                        <action selector="addButtonTapped:" destination="-1" eventType="touchUpInside" id="J4S-fF-uEa"/>
+                        <action selector="addButtonTapped" destination="-1" eventType="touchUpInside" id="eVj-ZB-TZb"/>
                     </connections>
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Kayıt Ekle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="psk-Ao-JaN">
